copy button on report, use of html templating for form and report, link from report back to home

--- a/app/index.html
+++ b/app/index.html
@@ -30,10 +30,34 @@
           <label>Strongly disagree</label>
         </li>
       </ul>
+      <label class="statement">Second statement</label>
+      <ul class='likert1'>
+        <li>
+          <input type="radio" name="likert1" value="strongly agree">
+          <label>Strongly agree</label>
+        </li>
+        <li>
+          <input type="radio" name="likert1" value="agree">
+          <label>Agree</label>
+        </li>
+        <li>
+          <input type="radio" name="likert1" value="neutral">
+          <label>Neutral</label>
+        </li>
+        <li>
+          <input type="radio" name="likert1" value="disagree">
+          <label>Disagree</label>
+        </li>
+        <li>
+          <input type="radio" name="likert1" value="strongly disagree">
+          <label>Strongly disagree</label>
+        </li>
+      </ul>
 
       <label for="comments">extra comments:</label><br>
       <textarea rows="20" cols="50" type="text" id="comments" name="comments" value=""></textarea><br>
 
+      <input type="reset" value="Reset">
       <input type="submit" value="Submit">
     </form>
   </body>
